fix: fixes dropdown menu z-index

--- a/nodebb-theme-fdk/less/navbar.less
+++ b/nodebb-theme-fdk/less/navbar.less
@@ -9,6 +9,10 @@
   padding: 0;
   border-radius: 5px;
 
+  .dropdown-menu {
+    z-index: 1001;
+  }
+
   .navbar-header > a {
     display: none;
   }
